
// ------------------------------------------------------------------------------------------------------------------
// This is auto generated code. Every manually change in this code will be overwritten at the next code generation! |
// ------------------------------------------------------------------------------------------------------------------
        
using DoofesZeug.Attributes;
using DoofesZeug.Attributes.Documentation;
using DoofesZeug.Attributes.Pattern;



namespace DoofesZeug.Entities.Specieses.Human.Professions
{
    [Description("This is an specialized entitiy for an teacher.")]
    [Generated]
    [Builder]
    public class Teacher : Profession
    {
        public Teacher() : base(WellKnownProfession.Teacher)
        {
        }
    }
}
