@startuml
skinparam monochrome true
hide empty members

abstract class Entity {
}

Entity <|-- IdentifiableEntity

abstract class IdentifiableEntity {
    Id: Guid
}

IdentifiableEntity <|-- Profession

abstract class Profession {
    WellKnownProfessionType: WellKnownProfession?
    Since: Date
}

Profession <|-- Teacher

class Teacher {
}

@enduml
